# future-ralph

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  homebrew.yml  publish.yml
contributing/: index.html
docs/: contributing.md  index.md
search/: search_index.json
src/future_ralph/: main.py
src/future_ralph/adapters/: base.py  claude.py  codex.py  gemini.py  opencode.py
src/future_ralph/core/: config.py  engine.py  logger.py  models.py  plugin.py  run_manager.py  scoring.py
src/future_ralph/tui/: app.py
tests/: test_adapters.py  test_cli.py  test_engine.py  test_run_manager.py
